[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
serde = { versio = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
time = { version = "0.3.34", features = ["macros", "serde", "formatting", "parsing"] }
tokio = { version = "1.36.0", features = [ "full" ] }
uuid = { version = "1.7.0", features = ["v7", "serde"] }
